--- a/code/src/index.css
+++ b/code/src/index.css
@@ -2,4 +2,124 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background: #21d19f;
+}
+.outer-wrapper {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+}
+.h1-logo {
+  font-size: 40px;
+  color: #ffffff;
+}
+.h1-shadow {
+  font-size: 40px;
+  color: #45b69c;
+  position: absolute;
+  top: 23px;
+  left: 24px;
+  z-index: -10;
+}
+.image {
+  display: block;
+  width: 400px;
+  height: 100%;
+  margin: 180px 0px;
+}
+.form {
+  margin-top: 60px;
+  margin-right: 40px;
+  width: auto;
+  padding: 20px;
+  position: relative;
+}
+
+/* Hiding standard radio buttons and replacing with styled bigger ones */
+.radio-button-container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.radio-button-container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+.custom-radio-button {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eeeeee;
+  border-radius: 50%;
+}
+.radio-button-container:hover input ~ .custom-radio-button {
+    background-color: #45B69C;
+}
+.radio-button-container input:checked ~ .custom-radio-button {
+    background-color: #7293A0;
+}
+.custom-radio-button:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+.radio-button-container input:checked ~ .custom-radio-button:after {
+  display: block;
+}
+.radio-button-container .custom-radio-button:after {
+ 	top: 9px;
+	left: 9px;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	background: #fff;
+}
+.formsection__textfields {
+}
+.formsection__textfields input {
+  margin-top: 3px;
+  margin-bottom: 10px;
+  border: none;
+  font-size: 20px;
+  padding: 5px;
+}
+.formsection__textfields input:focus {
+  background-color: #D8DDEF;
+}
+
+@media (max-width: 730px) {
+  .outer-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .image {
+    display: block;
+    margin-top: 50px;
+    margin-bottom: 0px;
+    width: 100px;
+    height: 100%;
+  }
+  .form {
+    margin: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  h1 {
+    margin: 20px;
+  }
 }
