--- a/code/src/index.css
+++ b/code/src/index.css
@@ -24,7 +24,7 @@ body {
 .image {
   display: block;
   width: 400px;
-  height: 100%;
+  height: 356px;
   margin: 180px 0px;
 }
 .form {
@@ -116,7 +116,7 @@ body {
     margin-top: 50px;
     margin-bottom: 0px;
     width: 100px;
-    height: 100%;
+    height: 89px;
   }
   .form {
     margin: 0px;
